...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xCj-ZQ-9wt">
                                        <rect key="frame" x="0.0" y="21" width="560" height="517"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ResultView"/>
                                        <string key="text">As you type a chat string, Chatalyzer will interactively display here the @mentions, emoticons, and link contents it found in its chatalysis.

Tap 'Tap to begin' at the bottom of the screen to begin!</string>
                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tap to begin" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oYU-fN-tak">
                                        <rect key="frame" x="0.0" y="538" width="560" height="30"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.20425112612612611" colorSpace="calibratedWhite"/>
...
